# trading-ig-core

./: README.md  pyproject.toml
trading_ig/: __init__.py  igsession.py  stream_handler.py
trading_ig/rest_api/: accounts.py  base_rest_api_call.py  client_sentiment.py  dealing.py  general.py  historical_data.py  login.py  markets.py  positions.py  rest_api_enums.py  watchlists.py
trading_ig/rest_api/responses/: dealing.py  login.py
trading_ig/streaming_api/: streaming_enums.py  subscriptions.py  updates.py
trading_ig_core/: __init__.py  igsession.py  rest.py_old  utils.py
trading_ig_core/rest_api/: accounts.py  base_rest_api_call.py  client_sentiment.py  dealing.py  general.py  historical_data.py  login.py  markets.py  rest_api_enums.py  watchlists.py
trading_ig_core/rest_api/responses/: dealing.py  login.py
trading_ig_core/streaming_api/: subscriptions.py  updates.py
