[build-system]
requires = ["uv_build>=0.11.6,<0.12.0"]
build-backend = "uv_build"

[project]
name = "trading-ig"
version = "0.0.24"
description = "A lightweight Python wrapper for the IG Markets API"
authors = [
    { name = "Femto Trader", email = "femto.trader@gmail.com" },
    { name = "Andy Geach", email = "andy@bugorfeature.net" },
    { name = "Mat Tolladay", email = "djlets2004@yahoo.co.uk"},
]
requires-python = ">=3.12,<4"
readme = "README.rst"
license = "BSD-3-Clause"
dependencies = [
    "cryptography",
    "requests>=2.24,<3",
    "requests-cache>=0.5,<0.6",
    "lightstreamer-client-lib==1.0.3",
]

[project.optional-dependencies]
pandas = ["pandas>=2,<3"]
munch = ["munch>=2.5,<3"]
tenacity = ["tenacity>=8,<9"]

[dependency-groups]
dev = [
    "ruff",
    "pytest",
    "responses>=0.25,<0.26",
    "coveralls>=3,<4",
    "sphinx",
    "sphinx-rtd-theme",
]

[tool.uv.build-backend]
module-name = "trading_ig"
module-root = ""
