[build-system]
requires = ["uv_build>=0.11.6,<0.12.0"]
build-backend = "uv_build"

[project]
name = "trading-ig-core"
version = "0.0.01"
description = "A lightweight Python wrapper for the IG Markets API"
authors = [
    { name = "Femto Trader", email = "femto.trader@gmail.com" },
    { name = "Andy Geach", email = "andy@bugorfeature.net" },
    { name = "Mat Tolladay", email = "djlets2004@yahoo.co.uk"},
]
requires-python = ">=3.12,<4"
readme = "README.md"
license = "BSD-3-Clause"
dependencies = [
    "cryptography",
    "requests>=2.24,<3",
    "lightstreamer-client-lib>=1.0.3",
    "pydantic",
]

[project.optional-dependencies]
pandas = ["pandas>=2,<3"]

[dependency-groups]
dev = [
    "ruff",
    "pytest",
]

[tool.uv.build-backend]
module-name = "trading_ig_core"
module-root = ""
